# irc-discord-bouncer

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.sample
.github/: build.yml  dependabot.yml
.github/workflows/: build.yml
src/: discord.rs  irc.rs  main.rs  message.rs
