[package]
name = "irc-discord-bouncer"
version = "0.1.0"
authors = ["John C. Allwein <git@johnnyapol.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
simple-error = "0.2.3"