[package]
name = "irc-discord-bouncer"
version = "0.1.0"
authors = ["John C. Allwein <git@johnnyapol.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
simple-error = "0.2.3"
serenity = "0.10.7"
serde = "1.0.126"
serde_json = "1.0.64"
lazy_static = "1.4.0"
regex = "1.5.4"
tokio-native-tls = "0.3.0"
native-tls = "0.2.7"
base64 = "0.13.0"